tests/new_react/new_react.exp
Error: bad_default_props.js:15
 15: class C3 extends React.Component { // error
                      ^^^^^^^^^^^^^^^ property `Component`. Too few type arguments. Expected at least 1
 26: declare class React$Component<Props, State = void> {
                                   ^^^^^^^^^^^^ See type parameters of definition here. See lib: <BUILTINS>/react.js:26

Error: bad_default_props.js:20
 20: class C4 extends React.Component { // error
                      ^^^^^^^^^^^^^^^ property `Component`. Too few type arguments. Expected at least 1
 26: declare class React$Component<Props, State = void> {
                                   ^^^^^^^^^^^^ See type parameters of definition here. See lib: <BUILTINS>/react.js:26

Error: classes.js:7
  7: class Foo extends React.Component<Props, State> {
           ^^^ Foo. Cannot extend
  7: class Foo extends React.Component<Props, State> {
                       ^^^^^^^^^^^^^^^ React.Component
  Property `setState` is incompatible:
     23:   setState(o: { y_: string }): void { }
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with
           v--------
     34:   setState(
     35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
     36:     callback?: () => mixed,
     37:   ): void;
           ------^ function type. See lib: <BUILTINS>/react.js:34
      This parameter is incompatible:
         23:   setState(o: { y_: string }): void { }
                           ^^^^^^^^^^^^^^ object type. This type is incompatible with
         35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ State. See lib: <BUILTINS>/react.js:35
          Property `y_` is incompatible:
             23:   setState(o: { y_: string }): void { }
                               ^^^^^^^^^^^^^^ property `y_`. Property not found in
             35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ State. See lib: <BUILTINS>/react.js:35

Error: classes.js:7
  7: class Foo extends React.Component<Props, State> {
           ^^^ Foo. Cannot extend
  7: class Foo extends React.Component<Props, State> {
                       ^^^^^^^^^^^^^^^ React.Component
  Property `setState` is incompatible:
     23:   setState(o: { y_: string }): void { }
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with
           v--------
     34:   setState(
     35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
     36:     callback?: () => mixed,
     37:   ): void;
           ------^ function type. See lib: <BUILTINS>/react.js:34
      This parameter is incompatible:
         23:   setState(o: { y_: string }): void { }
                           ^^^^^^^^^^^^^^ object type. This type is incompatible with
         35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/react.js:35
          Property `y_` is incompatible:
             23:   setState(o: { y_: string }): void { }
                               ^^^^^^^^^^^^^^ property `y_` of object type. Property not found in
             35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/react.js:35

Error: classes.js:15
 15:     var _: string = this.props.x;
                         ^^^^^^^^^^^^ number. This type is incompatible with
 15:     var _: string = this.props.x;
                ^^^^^^ string

Error: classes.js:20
 20:     this.state = { y: "" };
                      ^^^^^^^^^ object literal. This type is incompatible with
 20:     this.state = { y: "" };
         ^^^^^^^^^^ State
  Property `y` is incompatible:
     20:     this.state = { y: "" };
                               ^^ string. This type is incompatible with
      5: type State = { y: number };
                           ^^^^^^ number

Error: classes.js:38
 38: Foo.defaultProps = 0;
                        ^ number. This type is incompatible with
 38: Foo.defaultProps = 0;
     ^^^^^^^^^^^^^^^^ object type

Error: classes.js:39
 39: var foo: $jsx<number> = <Foo/>;
                             ^^^^^^ React element `Foo`
159:   +props: React$ElementProps<ElementType>,
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element props. Expected React component instead of. See lib: <BUILTINS>/react.js:159
 39: var foo: $jsx<number> = <Foo/>;
                   ^^^^^^ number

Error: classes.js:39
 39: var foo: $jsx<number> = <Foo/>;
                             ^^^^^^ React element `Foo`
 39: var foo: $jsx<number> = <Foo/>;
                   ^^^^^^ number. This type is incompatible with
157: declare type React$Element<+ElementType: React$ElementType> = {|
                                              ^^^^^^^^^^^^^^^^^ union: string | `React.StatelessFunctionalComponent` | statics of `React.Component`. See lib: <BUILTINS>/react.js:157
  Member 1:
  149:   | string
           ^^^^^^ string. See lib: <BUILTINS>/react.js:149
  Error:
   39: var foo: $jsx<number> = <Foo/>;
                     ^^^^^^ number. This type is incompatible with
  149:   | string
           ^^^^^^ string. See lib: <BUILTINS>/react.js:149
  Member 2:
  150:   | React$StatelessFunctionalComponent<any>
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React.StatelessFunctionalComponent. See lib: <BUILTINS>/react.js:150
  Error:
   39: var foo: $jsx<number> = <Foo/>;
                     ^^^^^^ number. This type is incompatible with
  150:   | React$StatelessFunctionalComponent<any>
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React.StatelessFunctionalComponent. See lib: <BUILTINS>/react.js:150
  Member 3:
  151:   | Class<React$Component<any, any>>;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ statics of `React.Component`. See lib: <BUILTINS>/react.js:151
  Error:
   39: var foo: $jsx<number> = <Foo/>;
                     ^^^^^^ number. This type is incompatible with
  151:   | Class<React$Component<any, any>>;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ statics of `React.Component`. See lib: <BUILTINS>/react.js:151

Error: classes.js:39
 39: var foo: $jsx<number> = <Foo/>;
                             ^^^^^^ React.Element. This type is incompatible with
 39: var foo: $jsx<number> = <Foo/>;
              ^^^^^^^^^^^^ React.Element
  Property `type` is incompatible:
      7: class Foo extends React.Component<Props, State> {
               ^^^ statics of `Foo`. This type is incompatible with
     39: var foo: $jsx<number> = <Foo/>;
                       ^^^^^^ number

Error: classes.js:39
 39: var foo: $jsx<number> = <Foo/>;
                             ^^^^^^ props of React element `Foo`. This type is incompatible with
  7: class Foo extends React.Component<Props, State> {
                                       ^^^^^ Props
  Property `x` is incompatible:
      7: class Foo extends React.Component<Props, State> {
                                           ^^^^^ property `x`. Property not found in
     39: var foo: $jsx<number> = <Foo/>;
                                 ^^^^^^ props of React element `Foo`

Error: classes.js:43
                     v------------------
 43: var FooLegacy = React.createClass({
 44:   is_mounted: (undefined: ?boolean),
 45: 
...:
 76: });
     -^ call of method `createClass`. This type is incompatible with
                     v------------------
 43: var FooLegacy = React.createClass({
 44:   is_mounted: (undefined: ?boolean),
 45: 
...:
 76: });
     -^ LegacyReactComponent
  Property `setState` is incompatible:
     64:   setState(o: { y_: string }): void { },
                   ^^^^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with
           v--------
     34:   setState(
     35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
     36:     callback?: () => mixed,
     37:   ): void;
           ------^ function type. See lib: <BUILTINS>/react.js:34
      This parameter is incompatible:
         60:   getInitialState(): { y: string } {
                              ^^^^^^^^^^^^^^^^^ object type. This type is incompatible with
         64:   setState(o: { y_: string }): void { },
                           ^^^^^^^^^^^^^^ object type
          Property `y_` is incompatible:
             64:   setState(o: { y_: string }): void { },
                               ^^^^^^^^^^^^^^ property `y_`. Property not found in
             60:   getInitialState(): { y: string } {
                                  ^^^^^^^^^^^^^^^^^ object type

Error: classes.js:43
                     v------------------
 43: var FooLegacy = React.createClass({
 44:   is_mounted: (undefined: ?boolean),
 45: 
...:
 76: });
     -^ call of method `createClass`. This type is incompatible with
                     v------------------
 43: var FooLegacy = React.createClass({
 44:   is_mounted: (undefined: ?boolean),
 45: 
...:
 76: });
     -^ LegacyReactComponent
  Property `setState` is incompatible:
     64:   setState(o: { y_: string }): void { },
                   ^^^^^^^^^^^^^^^^^^^^^^^^^ function. This type is incompatible with
           v--------
     34:   setState(
     35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
     36:     callback?: () => mixed,
     37:   ): void;
           ------^ function type. See lib: <BUILTINS>/react.js:34
      This parameter is incompatible:
         64:   setState(o: { y_: string }): void { },
                           ^^^^^^^^^^^^^^ object type. This type is incompatible with
         35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/react.js:35
          Property `y_` is incompatible:
             64:   setState(o: { y_: string }): void { },
                               ^^^^^^^^^^^^^^ property `y_` of object type. Property not found in
             35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/react.js:35

Error: classes.js:57
 57:     var _: string = this.props.x;
                         ^^^^^^^^^^^^ number. This type is incompatible with
 57:     var _: string = this.props.x;
                ^^^^^^ string

Error: classes.js:79
 79: var foo_legacy: $jsx<number> = <FooLegacy/>;
                                    ^^^^^^^^^^^^ React element `FooLegacy`
159:   +props: React$ElementProps<ElementType>,
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element props. Expected React component instead of. See lib: <BUILTINS>/react.js:159
 79: var foo_legacy: $jsx<number> = <FooLegacy/>;
                          ^^^^^^ number

Error: classes.js:79
 79: var foo_legacy: $jsx<number> = <FooLegacy/>;
                                    ^^^^^^^^^^^^ React element `FooLegacy`
 79: var foo_legacy: $jsx<number> = <FooLegacy/>;
                          ^^^^^^ number. This type is incompatible with
157: declare type React$Element<+ElementType: React$ElementType> = {|
                                              ^^^^^^^^^^^^^^^^^ union: string | `React.StatelessFunctionalComponent` | statics of `React.Component`. See lib: <BUILTINS>/react.js:157
  Member 1:
  149:   | string
           ^^^^^^ string. See lib: <BUILTINS>/react.js:149
  Error:
   79: var foo_legacy: $jsx<number> = <FooLegacy/>;
                            ^^^^^^ number. This type is incompatible with
  149:   | string
           ^^^^^^ string. See lib: <BUILTINS>/react.js:149
  Member 2:
  150:   | React$StatelessFunctionalComponent<any>
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React.StatelessFunctionalComponent. See lib: <BUILTINS>/react.js:150
  Error:
   79: var foo_legacy: $jsx<number> = <FooLegacy/>;
                            ^^^^^^ number. This type is incompatible with
  150:   | React$StatelessFunctionalComponent<any>
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React.StatelessFunctionalComponent. See lib: <BUILTINS>/react.js:150
  Member 3:
  151:   | Class<React$Component<any, any>>;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ statics of `React.Component`. See lib: <BUILTINS>/react.js:151
  Error:
   79: var foo_legacy: $jsx<number> = <FooLegacy/>;
                            ^^^^^^ number. This type is incompatible with
  151:   | Class<React$Component<any, any>>;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ statics of `React.Component`. See lib: <BUILTINS>/react.js:151

Error: classes.js:79
 79: var foo_legacy: $jsx<number> = <FooLegacy/>;
                                    ^^^^^^^^^^^^ React element `FooLegacy`
 79: var foo_legacy: $jsx<number> = <FooLegacy/>;
                                    ^^^^^^^^^^^^ props of React element `FooLegacy`. Cannot use React default props from
 78: FooLegacy.defaultProps = 0;
                              ^ number

Error: classes.js:79
 79: var foo_legacy: $jsx<number> = <FooLegacy/>;
                                    ^^^^^^^^^^^^ React.Element. This type is incompatible with
 79: var foo_legacy: $jsx<number> = <FooLegacy/>;
                     ^^^^^^^^^^^^ React.Element
  Property `type` is incompatible:
                         v------------------
     43: var FooLegacy = React.createClass({
     44:   is_mounted: (undefined: ?boolean),
     45: 
    ...:
     76: });
         -^ statics of React component. This type is incompatible with
     79: var foo_legacy: $jsx<number> = <FooLegacy/>;
                              ^^^^^^ number

Error: classes.js:79
 79: var foo_legacy: $jsx<number> = <FooLegacy/>;
                                    ^^^^^^^^^^^^ props of React element `FooLegacy`. This type is incompatible with
                  v
 46:   propTypes: {
 47:     x: React.PropTypes.number.isRequired
 48:   },
       ^ propTypes of React component
  Property `x` is incompatible:
                      v
     46:   propTypes: {
     47:     x: React.PropTypes.number.isRequired
     48:   },
           ^ property `x`. Property not found in
     79: var foo_legacy: $jsx<number> = <FooLegacy/>;
                                        ^^^^^^^^^^^^ props of React element `FooLegacy`

Error: import-react.js:16
 16: <HelloMessage name={007} />; // number ~/~> string error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ props of React element `HelloMessage`. This type is incompatible with
 14: class HelloMessage extends React.Component<{ name: string }> {}
                                                ^^^^^^^^^^^^^^^^ object type
  Property `name` is incompatible:
     16: <HelloMessage name={007} />; // number ~/~> string error
                             ^^^ number. This type is incompatible with
     14: class HelloMessage extends React.Component<{ name: string }> {}
                                                            ^^^^^^ string

Error: new_react.js:17
 17:         var foo: string = this.state;
                               ^^^^^^^^^^ null. This type is incompatible with
 17:         var foo: string = this.state;
                      ^^^^^^ string

Error: new_react.js:18
 18:         var bar: string = this.props;
                               ^^^^^^^^^^ propTypes of React component. This type is incompatible with
 18:         var bar: string = this.props;
                      ^^^^^^ string

Error: new_react.js:19
 19:         var qux: string = this.props.z;
                               ^^^^^^^^^^^^ number. This type is incompatible with
 19:         var qux: string = this.props.z;
                      ^^^^^^ string

Error: new_react.js:19
 19:         var qux: string = this.props.z;
                               ^^^^^^^^^^^^ undefined. This type is incompatible with
 19:         var qux: string = this.props.z;
                      ^^^^^^ string

Error: new_react.js:20
 20:         var w:number = this.props.x;
                            ^^^^^^^^^^^^ string. This type is incompatible with
 20:         var w:number = this.props.x;
                   ^^^^^^ number

Error: new_react.js:21
 21:         this.props.y[0];
             ^^^^^^^^^^^^^^^ computed property. Computed property/element cannot be accessed on possibly undefined value
 21:         this.props.y[0];
             ^^^^^^^^^^^^ undefined

Error: new_react.js:29
 29: var element = <C x = {0}/>;
                   ^^^^^^^^^^^^ props of React element `C`. This type is incompatible with
                    v
  5:     propTypes: {
  6:         x: React.PropTypes.string.isRequired,
  7:         y: React.PropTypes.array,
  8:         z: React.PropTypes.number
  9:     },
         ^ propTypes of React component
  Property `x` is incompatible:
     29: var element = <C x = {0}/>;
                               ^ number. This type is incompatible with
      6:         x: React.PropTypes.string.isRequired,
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string

Error: new_react.js:30
 30: var element_ = <C/>;
                    ^^^^ props of React element `C`. This type is incompatible with
                    v
  5:     propTypes: {
  6:         x: React.PropTypes.string.isRequired,
  7:         y: React.PropTypes.array,
  8:         z: React.PropTypes.number
  9:     },
         ^ propTypes of React component
  Property `x` is incompatible:
                        v
      5:     propTypes: {
      6:         x: React.PropTypes.string.isRequired,
      7:         y: React.PropTypes.array,
      8:         z: React.PropTypes.number
      9:     },
             ^ property `x`. Property not found in
     30: var element_ = <C/>;
                        ^^^^ props of React element `C`

Error: new_react.js:32
 32: var x: number = C.displayName;
                     ^^^^^^^^^^^^^ null or undefined. This type is incompatible with
 32: var x: number = C.displayName;
            ^^^^^^ number

Error: new_react.js:32
 32: var x: number = C.displayName;
                     ^^^^^^^^^^^^^ string. This type is incompatible with
 32: var x: number = C.displayName;
            ^^^^^^ number

Error: new_react.js:32
 32: var x: number = C.displayName;
                     ^^^^^^^^^^^^^ undefined. This type is incompatible with
 32: var x: number = C.displayName;
            ^^^^^^ number

Error: propTypes.js:13
     v---------------
 13: <C statistics={[
 14:   {},
 15:   {label:"",value:undefined},
 16: ]}/>; // error (label is required, value not required)
     ---^ props of React element `C`. This type is incompatible with
                  v
  5:   propTypes: {
  6:     statistics: PropTypes.arrayOf(PropTypes.shape({
  7:       label: PropTypes.string.isRequired,
...:
 10:   }
       ^ propTypes of React component
  Property `statistics` is incompatible:
                        v
     13: <C statistics={[
     14:   {},
     15:   {label:"",value:undefined},
     16: ]}/>; // error (label is required, value not required)
         ^ array literal. Has some incompatible type argument with
                         v----------------------------------
      6:     statistics: PropTypes.arrayOf(PropTypes.shape({
      7:       label: PropTypes.string.isRequired,
      8:       value: PropTypes.number,
      9:     })).isRequired,
             -------------^ array type
      Type argument `T` is incompatible:
         14:   {},
               ^^ object literal. This type is incompatible with
                                               v----------------
          6:     statistics: PropTypes.arrayOf(PropTypes.shape({
          7:       label: PropTypes.string.isRequired,
          8:       value: PropTypes.number,
          9:     })).isRequired,
                 -^ object type
          Property `label` is incompatible:
                                                   v----------------
              6:     statistics: PropTypes.arrayOf(PropTypes.shape({
              7:       label: PropTypes.string.isRequired,
              8:       value: PropTypes.number,
              9:     })).isRequired,
                     -^ property `label`. Property not found in
             14:   {},
                   ^^ object literal

Error: propTypes.js:18
                                                         v
 18: var props: Array<{label: string, value?: number}> = [
 19:   {},
 20:   {label:"",value:undefined},
 21: ]; // error (same as ^)
     ^ array literal. Has some incompatible type argument with
 18: var props: Array<{label: string, value?: number}> = [
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ array type
  Type argument `T` is incompatible:
     19:   {},
           ^^ object literal. This type is incompatible with
     18: var props: Array<{label: string, value?: number}> = [
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
      Property `label` is incompatible:
         18: var props: Array<{label: string, value?: number}> = [
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `label`. Property not found in
         19:   {},
               ^^ object literal

Error: props.js:14
 14:         var a: number = this.props.x; // error
                             ^^^^^^^^^^^^ string. This type is incompatible with
 14:         var a: number = this.props.x; // error
                    ^^^^^^ number

Error: props.js:14
 14:         var a: number = this.props.x; // error
                             ^^^^^^^^^^^^ undefined. This type is incompatible with
 14:         var a: number = this.props.x; // error
                    ^^^^^^ number

Error: props.js:15
 15:         var b: string = this.props.y; // error
                                        ^ property `y`. Property not found in
 15:         var b: string = this.props.y; // error
                             ^^^^^^^^^^ propTypes of React component

Error: props.js:16
 16:         var c: string = this.props.z; // error
                             ^^^^^^^^^^^^ number. This type is incompatible with
 16:         var c: string = this.props.z; // error
                    ^^^^^^ string

Error: props.js:16
 16:         var c: string = this.props.z; // error
                             ^^^^^^^^^^^^ undefined. This type is incompatible with
 16:         var c: string = this.props.z; // error
                    ^^^^^^ string

Error: props.js:20
 20: var element = <TestProps x={false} y={false} z={false} />; // 3 errors
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props of React element `TestProps`. This type is incompatible with
                    v
  4:     propTypes: {
  5:         x: React.PropTypes.string,
  6:         z: React.PropTypes.number
  7:     },
         ^ propTypes of React component
  Property `x` is incompatible:
     20: var element = <TestProps x={false} y={false} z={false} />; // 3 errors
                                     ^^^^^ boolean. This type is incompatible with
      5:         x: React.PropTypes.string,
                    ^^^^^^^^^^^^^^^^^^^^^^ string

Error: props.js:20
 20: var element = <TestProps x={false} y={false} z={false} />; // 3 errors
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props of React element `TestProps`. This type is incompatible with
                    v
  4:     propTypes: {
  5:         x: React.PropTypes.string,
  6:         z: React.PropTypes.number
  7:     },
         ^ propTypes of React component
  Property `z` is incompatible:
     20: var element = <TestProps x={false} y={false} z={false} />; // 3 errors
                                                         ^^^^^ boolean. This type is incompatible with
      6:         z: React.PropTypes.number
                    ^^^^^^^^^^^^^^^^^^^^^^ number

Error: props.js:27
 27: (element: $jsx<Class<FooProps>>);
      ^^^^^^^ React.Element. This type is incompatible with
 27: (element: $jsx<Class<FooProps>>);
               ^^^^^^^^^^^^^^^^^^^^^ React.Element
  Property `props` is incompatible:
                        v
      4:     propTypes: {
      5:         x: React.PropTypes.string,
      6:         z: React.PropTypes.number
      7:     },
             ^ propTypes of React component. This type is incompatible with
    159:   +props: React$ElementProps<ElementType>,
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ propTypes of React component. See lib: <BUILTINS>/react.js:159
      Property `w` is incompatible:
        159:   +props: React$ElementProps<ElementType>,
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `w`. Property not found in. See lib: <BUILTINS>/react.js:159
                            v
          4:     propTypes: {
          5:         x: React.PropTypes.string,
          6:         z: React.PropTypes.number
          7:     },
                 ^ propTypes of React component

Error: props2.js:14
 14:         var s: string = this.state.bar;
                             ^^^^^^^^^^^^^^ number. This type is incompatible with
 14:         var s: string = this.state.bar;
                    ^^^^^^ string

Error: props2.js:15
 15:         return <C {...this.state} foo = {0} />;
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props of React element `C`. This type is incompatible with
                    v
  3:     propTypes: {
  4:         foo: React.PropTypes.string.isRequired,
  5:         bar: React.PropTypes.string.isRequired,
  6:     }
         ^ propTypes of React component
  Property `bar` is incompatible:
      9:     getInitialState: function(): { bar: number } {
                                                 ^^^^^^ number. This type is incompatible with
      5:         bar: React.PropTypes.string.isRequired,
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string

Error: props2.js:15
 15:         return <C {...this.state} foo = {0} />;
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props of React element `C`. This type is incompatible with
                    v
  3:     propTypes: {
  4:         foo: React.PropTypes.string.isRequired,
  5:         bar: React.PropTypes.string.isRequired,
  6:     }
         ^ propTypes of React component
  Property `foo` is incompatible:
     15:         return <C {...this.state} foo = {0} />;
                                                  ^ number. This type is incompatible with
      4:         foo: React.PropTypes.string.isRequired,
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string

Error: props3.js:49
 49:       bad_one: React.PropTypes.imaginaryType,
                                    ^^^^^^^^^^^^^ property `imaginaryType`. Property not found in
 49:       bad_one: React.PropTypes.imaginaryType,
                    ^^^^^^^^^^^^^^^ ReactPropTypes

Error: props3.js:50
 50:       bad_two: React.PropTypes.string.inRequired,
                                           ^^^^^^^^^^ property `inRequired`. Property not found in
 50:       bad_two: React.PropTypes.string.inRequired,
                    ^^^^^^^^^^^^^^^^^^^^^^ ReactPropsChainableTypeChecker

Error: props4.js:9
  9: <JDiv id={42} />;
     ^^^^^^^^^^^^^^^^ props of React element `JDiv`. This type is incompatible with
  6: class JDiv extends React.Component<{id: string}> {}
                                        ^^^^^^^^^^^^ object type
  Property `id` is incompatible:
      9: <JDiv id={42} />;
                   ^^ number. This type is incompatible with
      6: class JDiv extends React.Component<{id: string}> {}
                                                 ^^^^^^ string

Error: props4.js:18
 18:   <Example foo="foo" />,
       ^^^^^^^^^^^^^^^^^^^^^ props of React element `Example`. This type is incompatible with
 11: class Example extends React.Component<{ bar: string }> {
                                           ^^^^^^^^^^^^^^^ object type
  Property `bar` is incompatible:
     11: class Example extends React.Component<{ bar: string }> {
                                               ^^^^^^^^^^^^^^^ property `bar`. Property not found in
     18:   <Example foo="foo" />,
           ^^^^^^^^^^^^^^^^^^^^^ props of React element `Example`

Error: props4.js:19
 19:   document.body
       ^^^^^^^^^^^^^ null. This type is incompatible with the expected param type of
 17:     container: Element,
                    ^^^^^^^ Element. See lib: <BUILTINS>/react-dom.js:17

Error: state.js:19
 19:                 {this.state.bar.qux}
                                     ^^^ property `qux`. Property cannot be accessed on possibly null value
 19:                 {this.state.bar.qux}
                      ^^^^^^^^^^^^^^ null or undefined

Error: state.js:19
 19:                 {this.state.bar.qux}
                                     ^^^ property `qux`. Property cannot be accessed on possibly undefined value
 19:                 {this.state.bar.qux}
                      ^^^^^^^^^^^^^^ null or undefined

Error: state3.js:11
 11:         var a: number = this.state.x; // error
                             ^^^^^^^^^^^^ string. This type is incompatible with
 11:         var a: number = this.state.x; // error
                    ^^^^^^ number

Error: state3.js:13
                           v
 13:         this.setState({
 14:             x: false // error
 15:         })
             ^ object literal. This type is incompatible with the expected param type of
 35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ union: `State` | function type. See lib: <BUILTINS>/react.js:35
  Member 1:
                       v------------------
    2: var TestState = React.createClass({
    3: 
    4:     getInitialState: function(): { x: string; } {
  ...:
   18: });
       -^ State
  Error:
   14:             x: false // error
                      ^^^^^ boolean. This type is incompatible with
    4:     getInitialState: function(): { x: string; } {
                                             ^^^^^^ string
  Member 2:
   35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/react.js:35
  Error:
                             v
   13:         this.setState({
   14:             x: false // error
   15:         })
               ^ object literal. This type is incompatible with
   35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/react.js:35
    Callable property is incompatible:
       35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. Callable signature not found in. See lib: <BUILTINS>/react.js:35
                                 v
       13:         this.setState({
       14:             x: false // error
       15:         })
                   ^ object literal

Error: state4.js:9
  9:     this.setState({ y: 0 });
                       ^^^^^^^^ object literal. This type is incompatible with the expected param type of
 35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ union: `State` | function type. See lib: <BUILTINS>/react.js:35
  Member 1:
               v------------------
    3: var C = React.createClass({
    4:   getInitialState: function(): { x: number } {
    5:     return { x: 0 };
  ...:
   13: });
       -^ State
  Error:
    9:     this.setState({ y: 0 });
                         ^^^^^^^^ property `y` of object literal. Property not found in
    4:   getInitialState: function(): { x: number } {
                          ^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Member 2:
   35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/react.js:35
  Error:
    9:     this.setState({ y: 0 });
                         ^^^^^^^^ object literal. This type is incompatible with
   35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/react.js:35
    Callable property is incompatible:
       35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. Callable signature not found in. See lib: <BUILTINS>/react.js:35
        9:     this.setState({ y: 0 });
                             ^^^^^^^^ object literal

Error: state4.js:10
 10:     return <div>{this.state.z}</div>
                                 ^ property `z`. Property not found in
 10:     return <div>{this.state.z}</div>
                      ^^^^^^^^^^ object type

Error: state5.js:5
  5:     return this.state.x; // error: need to declare type of state
                           ^ property `x`. Property cannot be accessed on possibly undefined value
  5:     return this.state.x; // error: need to declare type of state
                ^^^^^^^^^^ undefined

Error: state6.js:29
                       v-------------------------------------------
 29:     this.setState(() => ({ // Error: `bar` should be a number.
 30:       bar: '42',
 31:     }));
         -^ function. This type is incompatible with
 35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/react.js:35
  This parameter is incompatible:
                                  v------------------------------------
     29:     this.setState(() => ({ // Error: `bar` should be a number.
     30:       bar: '42',
     31:     }));
             ^ object literal. This type is incompatible with
     35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                                                              ^^^^^^^^^^^^^^^^^^^^ union: `State` | undefined. See lib: <BUILTINS>/react.js:35
      Member 1:
       13: class MyComponent extends React.Component<{prop: number}, State> {
                                                                     ^^^^^ State
      Error:
       30:       bar: '42',
                      ^^^^ string. This type is incompatible with
        7: type State = {foo: number, bar: number};
                                           ^^^^^^ number
      Member 2:
       35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                                                                                ^^^^ undefined. See lib: <BUILTINS>/react.js:35
      Error:
                                    v------------------------------------
       29:     this.setState(() => ({ // Error: `bar` should be a number.
       30:       bar: '42',
       31:     }));
               ^ object literal. This type is incompatible with
       35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                                                                                ^^^^ undefined. See lib: <BUILTINS>/react.js:35

Error: state6.js:33
 33:       console.log(prevState.nope); // Error: `nope` does not exist.
                                 ^^^^ property `nope`. Property not found in
 33:       console.log(prevState.nope); // Error: `nope` does not exist.
                       ^^^^^^^^^ State

Error: state6.js:36
 36:       console.log(props.nope); // Error: `nope` does not exist.
                             ^^^^ property `nope`. Property not found in
 36:       console.log(props.nope); // Error: `nope` does not exist.
                       ^^^^^ object type

Error: state6.js:41
 41:     this.setState((any: StateUpdater3)); // Error: It has the wrong signature
                             ^^^^^^^^^^^^^ StateUpdater3. This type is incompatible with the expected param type of
 35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ union: `State` | function type. See lib: <BUILTINS>/react.js:35
  Member 1:
   13: class MyComponent extends React.Component<{prop: number}, State> {
                                                                 ^^^^^ State
  Error:
   41:     this.setState((any: StateUpdater3)); // Error: It has the wrong signature
                               ^^^^^^^^^^^^^ property `$call` of `StateUpdater3`. Callable signature not found in
   13: class MyComponent extends React.Component<{prop: number}, State> {
                                                                 ^^^^^ State
  Member 2:
   35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/react.js:35
  Error:
   41:     this.setState((any: StateUpdater3)); // Error: It has the wrong signature
                               ^^^^^^^^^^^^^ StateUpdater3. This type is incompatible with
   35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/react.js:35
    Callable property is incompatible:
       11: type StateUpdater3 = {(number): number, foo: number, bar: number};
                                 ^^^^^^^^^^^^^^^^ function type. This type is incompatible with
       35:     partialState: $Shape<State> | ((State, Props) => $Shape<State> | void),
                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function type. See lib: <BUILTINS>/react.js:35
        This parameter is incompatible:
           13: class MyComponent extends React.Component<{prop: number}, State> {
                                                                         ^^^^^ State. This type is incompatible with
           11: type StateUpdater3 = {(number): number, foo: number, bar: number};
                                      ^^^^^^ number

Error: state6.js:47
 47: ((() => {}): $Shape<State>); // Error: Functions are not a valid object shape.
       ^^^^^^^^ function. Is not allowed as the shape of object type
 47: ((() => {}): $Shape<State>); // Error: Functions are not a valid object shape.
                         ^^^^^ State


Found 61 errors
